tests/purs/failing/FoldableInstance6.out
Error found:
in module [33mFoldableInstance6[0m
at tests/purs/failing/FoldableInstance6.purs:8:1 - 8:30 (line 8, column 1 - line 8, column 30)

  The type variable `a` must only be used as the last argument in a data type:

    tests/purs/failing/FoldableInstance6.purs:7:21 - 7:22 (line 7, column 21 - line 7, column 22)


in data constructor [33mTest[0m
in type class instance
[33m                             [0m
[33m  Data.Foldable.Foldable Test[0m
[33m                             [0m

See https://github.com/purescript/documentation/blob/master/errors/CannotDeriveInvalidConstructorArg.md for more information,
or to contribute content related to this error.

